# spider-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
archive/gymnasium/: QuietVideoRecorder.py  README.md  environment.py  requirements.txt  test_standing.py  train.py
archive/issac/: .gitignore  README.md  env.cfg.example  install.sh  interactive.sh  isaaclab.sh  requirements.txt  tensorboard.sh
hardware/: README.md  verify_encoder.py
hardware/GIM8108-8/: README.md  odrive-config
hardware/sysid/: __main__.py  experiments.py  fitting.py  motor.py  output.py
model/: README.md  SpiderBot.xml  SpiderEnv.xml  constants.py  process_export.sh  update_mujoco.py  update_urdf.py
model/robot/: SpiderEnv.xml
model/v2/: SpiderBot.xml  SpiderBot.xml.orig.xml  post-process.py
simulate/: .python-version  README.md  requirements.txt
simulate/alternate/: env.py  test_env.py
simulate/genesis/: README.md  environment.py  gait_command.py  gait_reward.py  play_joystick.py  play_joystick_rsl.py  ppo.yaml  requirements.txt  rewards.py  skrl_env_wrapper.py  test.py  train.py  train_rsl.py  train_skrl.py
simulate/gymnasium/: environment.py  test_standing.py  train.py
simulate/issac/: INSTALLATION.md  README.md  SUMMARY.md  cloud.cfg.example  cloud_mjcf_convert.sh  cloud_provision.sh  cloud_run.sh  comparison_with_original.md  env.cfg.example  isaaclab.sh  mjcf_2_usd.py  requirements.txt  (+6 more)
spider-bot/: README.md  environment.py  foot_angle_mdp.py  gait_command.py  gait_reward.py  play_joystick.py  play_joystick_rsl.py  play_motors.py  test.py  test_pose.py  train_rsl.py
spiderbot/: README.md  environment.py  test_pose.py  train_rsl.py  train_skrl.py
(+407 files in other folders)
