[project]
name = "spiderbot"
version = "0.1.0"
description = "Your friendly neighborhood eight-legged robot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "genesis-forge>=0.5.0",
    "genesis-world>=1.1.0",
    "numpy>=1.24.0",
    "hidapi>=0.15.0",
    "odrive>=0.6.7,<0.7.0",
    "python-can[serial]>=4.6.1",
    "pyyaml>=6.0.3",
    "rsl-rl-lib ~= 5.0",
    "scipy>=1.11.0",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]

[tool.uv]
package = false

[tool.uv.sources]
genesis-forge = { path = "../../genesis-forge" }

[tool.setuptools.packages.find]
exclude = ["model*", "archive*", "hardware*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
